save css upates

--- a/Shadowrun4thEdition/Shadowrun4thEdition.css
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.css
@@ -91,6 +91,7 @@ select {
     color: #1e4583; }
 
 span {
+  white-space: pre-line;
   word-break: break-word; }
 
 textarea {
@@ -431,6 +432,8 @@ div.sheet-matrix-device .sheet-matrixFirewall {
       background-color: rgba(28, 28, 28, 0.14902); }
   .sheet-pc input.sheet-display-flag {
     position: absolute; }
+  .sheet-pc select.sheet-attribute-select {
+    margin-top: 1%; }
   .sheet-pc div.sheet-border-box {
     background-image: -moz-linear-gradient(#1e4583, transparent), -moz-linear-gradient(#1e4583, transparent);
     background-image: -o-linear-gradient(#1e4583, transparent), -o-linear-gradient(#1e4583, transparent);
@@ -618,15 +621,15 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     .sheet-pc div.sheet-skill-box div.repitem label[data-i18n-title='notes'],
     .sheet-pc div.sheet-skill-box div.repitem h3[data-i18n='notes'],
     .sheet-pc div.sheet-skill-box div.repitem div.sheet-collapse {
-      grid-column: 1 / 7; }
+      grid-column: 1 / 6; }
     .sheet-pc div.sheet-skill-box div.repitem input.sheet-collapse-flag {
-      grid-area: 1 / 5 / 1 / 6; }
+      grid-area: 1 / 4 / 1 / 5; }
     .sheet-pc div.sheet-skill-box div.repitem input.sheet-collapse-flag + span.sheet-pictos, .sheet-pc div.sheet-skill-box div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-collapse-flag + span, .sheet-settings-toggle .sheet-pc div.sheet-skill-box div.repitem input[type='checkbox'].sheet-collapse-flag + span,
     .sheet-pc div.sheet-skill-box div.repitem .sheet-settings-flag input[type='checkbox'].sheet-collapse-flag + span,
     .sheet-settings-flag .sheet-pc div.sheet-skill-box div.repitem input[type='checkbox'].sheet-collapse-flag + span, .sheet-pc div.sheet-skill-box div.repitem .repcontrol input.sheet-collapse-flag + span.repcontrol_edit:after, .repcontrol .sheet-pc div.sheet-skill-box div.repitem input.sheet-collapse-flag + span.repcontrol_edit:after,
     .sheet-pc div.sheet-skill-box div.repitem .repcontrol input.sheet-collapse-flag + span.repcontrol_add:after,
     .repcontrol .sheet-pc div.sheet-skill-box div.repitem input.sheet-collapse-flag + span.repcontrol_add:after, .sheet-pc div.sheet-skill-box div.repitem .itemcontrol input.sheet-collapse-flag + span.repcontrol_del, .itemcontrol .sheet-pc div.sheet-skill-box div.repitem input.sheet-collapse-flag + span.repcontrol_del {
-      grid-area: 1 / 5 / 1 / 6; }
+      grid-area: 1 / 4 / 1 / 5; }
     .sheet-pc div.sheet-skill-box div.repitem input.sheet-settings-flag,
     .sheet-pc div.sheet-skill-box div.repitem input.sheet-settings-flag + span.sheet-pictos,
     .sheet-pc div.sheet-skill-box div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-settings-flag + span,
@@ -639,12 +642,12 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     .repcontrol .sheet-pc div.sheet-skill-box div.repitem input.sheet-settings-flag + span.repcontrol_add:after,
     .sheet-pc div.sheet-skill-box div.repitem .itemcontrol input.sheet-settings-flag + span.repcontrol_del,
     .itemcontrol .sheet-pc div.sheet-skill-box div.repitem input.sheet-settings-flag + span.repcontrol_del {
-      grid-area: 1 / 6 / 1 / 7; }
+      grid-area: 1 / 5 / 1 / 6; }
     .sheet-pc div.sheet-skill-box div.repitem input[name='attr_damage'],
     .sheet-pc div.sheet-skill-box div.repitem input[name='attr_dicepool_modifier'] {
       width: 3.5em; }
     .sheet-pc div.sheet-skill-box div.repitem div.sheet-settings {
-      grid-column: 1 / 7;
+      grid-column: 1 / 6;
       grid-template-columns: 1fr 3.5em 5em 1em 1em; }
   .sheet-pc div.sheet-arms div.sheet-headers {
     display: grid; }
@@ -672,21 +675,21 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   .sheet-pc div.sheet-arms div.repitem label.sheet-protections > input {
     width: 100%; }
   .sheet-pc div.sheet-arms div.sheet-weapons div.sheet-headers {
-    grid-template-columns: 1fr 5em 2.5em 3em 1fr 1fr 1em 1em; }
+    grid-template-columns: 1fr 4em 3em 3em 3em 3em 1em 1em; }
   .sheet-pc div.sheet-arms div.sheet-weapons div.repitem {
-    grid-template-columns: 1fr 5em 2.5em 3em 1fr 1fr 1em 1em; }
+    grid-template-columns: 1fr 4em 3em 3em 3em 3em 1em 1em; }
     .sheet-pc div.sheet-arms div.sheet-weapons div.repitem label[data-i18n-title='notes'],
     .sheet-pc div.sheet-arms div.sheet-weapons div.repitem h3[data-i18n='notes'],
     .sheet-pc div.sheet-arms div.sheet-weapons div.repitem div.sheet-collapse {
-      grid-column: 1 / 10; }
+      grid-column: 1 / 9; }
     .sheet-pc div.sheet-arms div.sheet-weapons div.repitem input.sheet-collapse-flag {
-      grid-area: 1 / 8 / 1 / 9; }
+      grid-area: 1 / 7 / 1 / 8; }
     .sheet-pc div.sheet-arms div.sheet-weapons div.repitem input.sheet-collapse-flag + span.sheet-pictos, .sheet-pc div.sheet-arms div.sheet-weapons div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-collapse-flag + span, .sheet-settings-toggle .sheet-pc div.sheet-arms div.sheet-weapons div.repitem input[type='checkbox'].sheet-collapse-flag + span,
     .sheet-pc div.sheet-arms div.sheet-weapons div.repitem .sheet-settings-flag input[type='checkbox'].sheet-collapse-flag + span,
     .sheet-settings-flag .sheet-pc div.sheet-arms div.sheet-weapons div.repitem input[type='checkbox'].sheet-collapse-flag + span, .sheet-pc div.sheet-arms div.sheet-weapons div.repitem .repcontrol input.sheet-collapse-flag + span.repcontrol_edit:after, .repcontrol .sheet-pc div.sheet-arms div.sheet-weapons div.repitem input.sheet-collapse-flag + span.repcontrol_edit:after,
     .sheet-pc div.sheet-arms div.sheet-weapons div.repitem .repcontrol input.sheet-collapse-flag + span.repcontrol_add:after,
     .repcontrol .sheet-pc div.sheet-arms div.sheet-weapons div.repitem input.sheet-collapse-flag + span.repcontrol_add:after, .sheet-pc div.sheet-arms div.sheet-weapons div.repitem .itemcontrol input.sheet-collapse-flag + span.repcontrol_del, .itemcontrol .sheet-pc div.sheet-arms div.sheet-weapons div.repitem input.sheet-collapse-flag + span.repcontrol_del {
-      grid-area: 1 / 8 / 1 / 9; }
+      grid-area: 1 / 7 / 1 / 8; }
     .sheet-pc div.sheet-arms div.sheet-weapons div.repitem input.sheet-settings-flag,
     .sheet-pc div.sheet-arms div.sheet-weapons div.repitem input.sheet-settings-flag + span.sheet-pictos,
     .sheet-pc div.sheet-arms div.sheet-weapons div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-settings-flag + span,
@@ -699,10 +702,10 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     .repcontrol .sheet-pc div.sheet-arms div.sheet-weapons div.repitem input.sheet-settings-flag + span.repcontrol_add:after,
     .sheet-pc div.sheet-arms div.sheet-weapons div.repitem .itemcontrol input.sheet-settings-flag + span.repcontrol_del,
     .itemcontrol .sheet-pc div.sheet-arms div.sheet-weapons div.repitem input.sheet-settings-flag + span.repcontrol_del {
-      grid-area: 1 / 9 / 1 / 10; }
+      grid-area: 1 / 8 / 1 / 9; }
     .sheet-pc div.sheet-arms div.sheet-weapons div.repitem div.sheet-settings {
-      grid-column: 1 / 10;
-      grid-template-columns: 1fr 5em 2.5em 3em 1fr 1fr 1em 1em; }
+      grid-column: 1 / 9;
+      grid-template-columns: 1fr 4em 3em 3em 3em 3em 1em 1em; }
   .sheet-pc div.sheet-arms div.sheet-weapons div.sheet-weapon-range,
   .sheet-pc div.sheet-arms div.sheet-weapons div.sheet-weapon-melee {
     width: 100%; }
