--- a/Shadowrun4thEdition/Shadowrun4thEdition.pug
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.pug
@@ -224,7 +224,7 @@ include src/pug/_variables.pug
                     optgroup(label='Combat Skills' ) Combat Skills
                       option(data-i18n='firearmsgroup' value='@{firearms}' selected) Firearms Group
                       option(data-i18n='automatics' value='@{automatics}') Automatics
-                      option(data-i18n='Archery' value='@{Archery}') Archery
+                      option(data-i18n='archery' value='@{Archery}') Archery
                       option(data-i18n='exoticrange' value='0') Exotic Range
                       option(data-i18n='heavyweapons' value='@{heavyweapons}') Heavy Weapons
                       option(data-i18n='longarms' value='@{longarms}') Longarms
