--- a/Shadowrun4thEdition/Shadowrun4thEdition.scss
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.scss
@@ -189,6 +189,11 @@
 
 		input.sheet-display-flag { position: absolute; }
 
+    //used in magic & complex forms
+    select.sheet-attribute-select {
+      margin-top: 1%;
+    }
+
 		/***** DECORATIVE BOX THAT ADDS THE RED OUTLINE ON PC SHEET *****/			
 		div.sheet-border-box {
 			background-image: -moz-linear-gradient($accent, transparent), -moz-linear-gradient($accent, transparent);
@@ -363,7 +368,9 @@
 		div.sheet-skill-box {
 			$skillGrid: 1fr 3.5em 5em 1em 1em;
 
-			h2:nth-of-type(1n+2) { text-align: center; }
+			h2:nth-of-type(1n+2) { 
+        text-align: center; 
+      }
 
 			label {
 				display       : inline-block;
@@ -374,7 +381,9 @@
 					grid-area: 1 / 3 / 1 / 7; 
 					width: 100%;
 
-					input[type='number'] { width: 3em; }
+					input[type='number'] { 
+            width: 3em; 
+          }
 				}
 
 				&[data-i18n-title='specialization'] { grid-area: 3 / 1 / 3 / 7; }
@@ -428,7 +437,7 @@
 			div.repitem {
 				grid-template-columns: $skillGrid;
 
-				@include repeatingInformation(7, false);
+				@include repeatingInformation(6, false);
 
 				input[name='attr_damage'],
 				input[name='attr_dicepool_modifier'] {
@@ -436,7 +445,7 @@
 				}
 
 				div.sheet-settings { 
-					grid-column: 1 / 7;
+					grid-column: 1 / 6;
 					grid-template-columns: $skillGrid;
 				}
 			}
@@ -493,15 +502,17 @@
 			}
 
 			div.sheet-weapons {
-				$weaponsGrid: 1fr  5em 2.5em 3em 1fr 1fr 1em 1em;
-				div.sheet-headers { grid-template-columns:$weaponsGrid; }
+				div.sheet-headers { 
+          grid-template-columns: 1fr 4em 3em 3em 3em 3em 1em 1em; 
+        }
 
 				div.repitem {
+          $weaponsGrid: 1fr 4em 3em 3em 3em 3em 1em 1em;
 					grid-template-columns: $weaponsGrid;
-					@include repeatingInformation(10, false);
+					@include repeatingInformation(9, false);
 
 					div.sheet-settings { 
-						grid-column: 1 / 10;
+						grid-column: 1 / 9;
 						grid-template-columns: $weaponsGrid;
 					}
 				}
