--- a/DnD_Moldvay_AmandatheAmazon/D&D_Moldvay_AmandatheAmazon.css
+++ b/DnD_Moldvay_AmandatheAmazon/D&D_Moldvay_AmandatheAmazon.css
@@ -13,7 +13,7 @@
 
 /* TEMPLATES */
 .sheet-rolltemplate-odnd .sheet-RollTemp-wrapper {
-    background:url(https://i.imgur.com/3r76gXC.png) top left repeat;
+    background:url('https://i.imgur.com/3r76gXC.png') top left repeat;
     font-size: 10px;
     width:95%;
 
@@ -501,7 +501,7 @@
     color: #454343;
 }
 .charsheet .sheet-mainBg{
-    background-image:url(https://i.imgur.com/FxcEHHI.png);
+    background-image:url('https://i.imgur.com/FxcEHHI.png');
     background-repeat:no-repeat;
     background-origin: border-box;
     background-size: cover;
@@ -518,7 +518,7 @@
     /*background-image:url(https://i.imgur.com/5gpaGEp.jpg);*/
     /*background-image:url(https://i.imgur.com/C5TNftW.jpg);*/
     /*background-image:url(https://i.imgur.com/YLgncFs.png);*/
-    background-image: url(https://i.imgur.com/62twH3c.png);
+    background-image: url('https://i.imgur.com/62twH3c.png');
     background-repeat:repeat-y;
     background-origin: border-box;
     /*background-size: cover;*/
