add user feedback

--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -5,6 +5,7 @@
 @import 'src/scss/base/utilities';
 
 @import 'src/scss/components/switch';
+@import 'src/scss/components/collapse';
 
 @import 'src/scss/layout/tabs';
 
@@ -852,6 +853,7 @@ select {
 				div.sheet-headers {
 					display: grid;
 					grid-template-columns: $contactsGrid;
+          grid-column-gap: 0.5%;
 					width: 100%;
 				}
 
