--- a/Shadowrun5thEdition/src/scss/_pc.scss
+++ b/Shadowrun5thEdition/src/scss/_pc.scss
@@ -209,7 +209,8 @@
 				border-radius             : 5px;
 				border-right              : 3px solid #999;
 				border-style              : outset;
-				@extend .sheet-pictos;}
+				font-family: 'Pictos';
+      }
 
 			&[name*='shots_remove'] {
 				transform: rotate(180deg);
@@ -446,13 +447,22 @@
 				display         : inline-block;
 				margin-bottom   : -25px;
 				margin-right    : -7px;
+        transition: transform .3s;
 			}
 		}
 
 	.sheet-squares input[type='radio']:checked ~ input[type='radio'] + span,
 	.sheet-con-track input[type='radio']:checked ~ .sheet-squares span,
 	.sheet-con-track input[type='hidden'][value='0'] ~ .sheet-squares span {
-		background-color: transparent;}
+		background-color: transparent;
+  }
+
+  .sheet-squares {
+    input[type='radio']:hover + span {
+      background-color: rgba($grayshadow, .5);
+      transform: scale(1.1);
+    }
+  }
 
 	/***** MAKE CONDTION SQUARES APPEAR & DISPPEAR *****/
 		.sheet-hex-hider[value='8'] ~ input[type='radio']:nth-child(1n+19),
