--- a/Shadowrun5thEdition/src/scss/base/_utilities.scss
+++ b/Shadowrun5thEdition/src/scss/base/_utilities.scss
@@ -28,3 +28,29 @@
 .sheet-dicefontd6 {
   font-family: "dicefontd6"
 }
+
+%display-none,
+.sheet-display-none { 
+  display: none; 
+}
+
+%display-inline { 
+  display: inline; 
+}
+
+%display-inline-grid { 
+  display: inline-grid; 
+}
+
+%display-grid { 
+  display: grid; 
+}
+
+.sheet-pictos { 
+  font-family: 'Pictos'; 
+}
+
+%display-inline-block,
+.sheet-static {
+  display: inline-block;
+}
