--- a/Shadowrun5thEdition/src/scss/_hide.scss
+++ b/Shadowrun5thEdition/src/scss/_hide.scss
@@ -1,19 +1,4 @@
-	%display-none,
-  .sheet-display-none { 
-    display: none; 
-  }
-	%display-inline { display: inline; }
 
-	%display-inline-grid { display: inline-grid; }
-
-	%display-grid { display: grid; }
-
-	.sheet-pictos { font-family: 'Pictos'; }
-
-	%display-inline-block,
-	.sheet-static {
-		display: inline-block;
-	}
 
 	/***** PC AND NPC *****/
 	@each $characterType in $characterTypes {
@@ -60,8 +45,9 @@
 	}
 
 	/***** SETTINGS *****/				
-	div.sheet-collapse,
-	.sheet-settings { @extend %display-none; }
+	.sheet-settings { 
+    @extend %display-none; 
+  }
 
 	input[name='attr_stats_toggle'][value='settings'] ~ .sheet-attribute .sheet-settings,
 	input[name='attr_stats_toggle'][value='settings'] ~ .sheet-body .sheet-column .sheet-settings,
@@ -93,8 +79,9 @@
 
 	/* NEW REPEATING CONTAINER WAY TO SHOW & HIDE SETTINGS */
 	/* SLOWLY ELIMINATE ALL TRACES OF SETTINGS-TOGGLE WITH THIS WAY OF DOING THINGS */
-	input.sheet-settings-flag:checked ~ div.sheet-settings { display   : inherit; }
-	input.sheet-collapse-flag:checked ~ div.sheet-collapse { display: block; }
+	input.sheet-settings-flag:checked ~ div.sheet-settings {
+   display   : inherit; 
+ }
 
 	/* OLD WAY TO SHOW & HIDE THINGS */
     input.sheet-settings-toggle[value='display'] ~ .sheet-settings { @extend %display-none;  }
