--- a/Shadowrun5thEdition/src/scss/abstracts/_variables.scss
+++ b/Shadowrun5thEdition/src/scss/abstracts/_variables.scss
@@ -29,4 +29,5 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
   $text-shadow-red: 1px 1px 2px black, 0 0 25px red, 0 0 5px $red;
 
   $box-shadow: inset 0px 0px 3px 1px $grayshadow;
+  $box-shadow-outset: -1px -1px 1px 1px $grayshadow;
   $box-shadow-red: inset 0px 0px 3px 1px $red-light;
