--- a/Shadowrun5thEdition/src/scss/layout/_tabs.scss
+++ b/Shadowrun5thEdition/src/scss/layout/_tabs.scss
@@ -5,11 +5,12 @@
     &[type='action'] {
       background-color: #333;
       border-radius   : 2px;
-      border          : 1px solid $blacker;
+      border          : 1px solid $grayshadow;
       font-size       : 1em;
       font-weight     : bolder;
       text-transform  : capitalize;
       padding         : 5px;
+      box-shadow: $box-shadow-outset;
 
       &.sheet-pictos {
         text-transform: lowercase;
