remove obsolete css and add additiona user feedback

--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -324,12 +324,21 @@ select {
 		/***** STATIC  *****/
 		div.sheet-static { 
 			margin-right: 0.5%;
+      transition: transform .2s;
 
 			div.sheet-border-box,
 			div.sheet-border-box .sheet-pc-box {
 				border-top-right-radius: 0px;
 				border-top-left-radius : 10px;
 			}
+
+      div.sheet-attr-box {
+        button {
+          &:hover, &:focus, &:active {
+            transform: scale(1.1);
+          }
+        }
+      }
 		}
 
 
@@ -647,7 +656,6 @@ select {
 				h3:nth-of-type(1n+2) { text-align: center; }
 			} 
 
-
 			/***** SPELLS & PREPARTATIONS *****/
 			div.sheet-spellsForumlas {
 				div.repitem {
@@ -746,7 +754,27 @@ select {
 
 		/*** MATRIX ****/
 		div.sheet-matrix {
-			h3 { color: $blacker; }
+      button[type='roll'] {
+        font-size: 0.9em;
+      }
+
+			h3 { 
+        color: $blacker; 
+      }
+
+      /* Needs to be refactored into Grid */
+      div.sheet-device-attr {
+        display: inline;
+        transition: transform .2s;
+
+        span {
+          position: relative;
+        }
+
+        input[type='radio']:hover + span {
+          transform: $button-scale-medium;
+        }
+      }
 
 			div.sheet-programs {
 				$programGrid: 1em 1fr 1.5em 1em 1em;
@@ -880,7 +908,7 @@ select {
 /******************************************************************************************/
 /**************************** START OF THE NPC SHEET *************************************/
 /****************************************************************************************/
-	@import 'src/scss/_npc'; 
+	@import 'src/scss/pages/npc'; 
 
 /**************************************************************************/
 /***************** PC & NPC SHEET SHOW & HIDE SETTINGS *******************/
