--- a/Shadowrun5thEdition/src/scss/layout/_tabs.scss
+++ b/Shadowrun5thEdition/src/scss/layout/_tabs.scss
@@ -11,13 +11,15 @@
       text-transform  : capitalize;
       padding         : 5px;
       box-shadow: $box-shadow-outset;
+      transition: transform .2s;
 
       &.sheet-pictos {
         text-transform: lowercase;
       }
 
-      &:hover {
+      &:hover, &:focus, &:active {
         text-shadow: $box-shadow-red;
+        transform: scale(1.1);
       }
     }
 
