--- a/Shadowrun5thEdition/src/scss/_pc.scss
+++ b/Shadowrun5thEdition/src/scss/_pc.scss
@@ -617,48 +617,6 @@
 	width     : 10%;
 }
 
-/***** COLLAPSABLE DIVS *****/
-	.sheet-collapsable {
-		padding-left: 1.5em;
-		width       : 100%;
-		word-break  : break-word;
-
-		span { white-space: pre-line; }
-
-		.sheet-desc { 
-			@extend %display-none;
-
-			.sheet-display-flag:checked ~ & { @extend %display-inline; }
-		}
-
-		.sheet-desc-lifestyle { 
-			@extend %display-none;
-
-			.sheet-display-flag:checked ~ & {
-				@extend %display-inline-block;
-				width: 100%;
-			}
-		}
-	}
-
-	/***** DISPLAY FLAG FOR THE COLLAPSABLE DIVS *****/
-	%display-flag {
-		opacity : 0;    
-		position: absolute;
-		top     : 0px;
-		width   : 90%;
-		height  : 100%;
-	}
-
-	$displayFlags: 'quality-box', 'contacts', 'social-box', 'vehicle-box';
-	@each $flag in $displayFlags {
-		.sheet-#{$flag} .sheet-display-flag { @extend %display-flag;}
-	}
-
-	div.sheet-augs div.sheet-repeat-box {
-		.sheet-display-flag { @extend %display-flag;}
-	}
-
 /***** DISPLAY ROWS *****/
 	.sheet-display-row {
 		display       : inline-block;
@@ -673,19 +631,6 @@
 		}
 	}
 
-/***** DISPLAY & SETTINGS *****/	
-	.sheet-skills-row,
-	.sheet-lifestyle .sheet-settings div {
-		display: inline-block;
-		width  : 100%;
-	}
-
-	@each $box in 'contacts', 'item-box' {
-		.sheet-#{$box} .sheet-display,
-		.sheet-#{$box} .sheet-settings div {
-			@extend .sheet-skills-row;
-		}
-	}
 
 	/***** MATRIX *****/
 		.sheet-matrix {
@@ -716,17 +661,6 @@
 		}
 
 		/***** CYBERDECK *****/
-			.sheet-cyberdeck button {
-				font-weight: bold;
-
-				input[name="attr_flag"] {
-					position: absolute;
-
-					& + span {
-						position: absolute;
-					}
-				}
-			}
 
 			.sheet-cyberdeck h3 {
 				line-height: 20px;
@@ -766,14 +700,6 @@
 				margin-right: 1%;}
 
 		/**** MATRIX BUBBLES ****/
-			.sheet-pc .sheet-device-attr {
-				display: inline;
-
-				span {
-					position: relative;
-				}
-			}
-
 			.sheet-matrix-tot {
 				display: inline-block;
 				height : 20px;
@@ -889,15 +815,7 @@
 		.sheet-con-hex {
 			position: relative;
 			top     : -60px;
-
-			.sheet-edg-hex input[type='checkbox'],
-			.sheet-con-hex input[type='radio'] {
-				height      : 20px;
-				margin-right: -21px;
-				top         : -9px;
-				width       : 20px;
-			}
-
+      transition: transform .2s;
 		}
 
 		.sheet-edg-hex input[type='checkbox'],
@@ -909,6 +827,10 @@
 			opacity: 0;
 			z-index: 2;
 			position: relative;
+
+      &:hover + span {
+        transform: $button-scale-medium;
+      }
 		}
 
 		.sheet-hexagon {
@@ -953,9 +875,9 @@
 			border-top-color: $lightgray;}
 
 		.sheet-edg-hex input[type='checkbox']:checked + .sheet-hexagon,
-		.sheet-con-hex input[type='radio'] + .sheet-hexagon,
 		.sheet-con-hex input[type='radio']:checked + .sheet-hexagon {
-			background-color: #222;}
+			background-color: #222;
+    }
 
 		.sheet-edg-hex input[type='checkbox']:checked + .sheet-hexagon:before,
 		.sheet-con-hex input[type='radio']:checked + .sheet-hexagon:before  {
@@ -981,8 +903,6 @@
 		.sheet-hex-hider[value='7'] ~ input[type='checkbox']:nth-child(1n+17),
 		.sheet-hex-hider[value='7'] ~ input[type='checkbox']:nth-child(1n+17) + span {
 			display: none;}				
-
-
 
     .sheet-settings .sheet-textrow label {margin-bottom: 36px;}
 
