--- a/Shadowrun5thEdition/src/scss/abstracts/_variables.scss
+++ b/Shadowrun5thEdition/src/scss/abstracts/_variables.scss
@@ -31,3 +31,6 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
   $box-shadow: inset 0px 0px 3px 1px $grayshadow;
   $box-shadow-outset: -1px -1px 1px 1px $grayshadow;
   $box-shadow-red: inset 0px 0px 3px 1px $red-light;
+
+  $button-scale-small: scale(1.1);
+  $button-scale-medium: scale(1.3);
