reduce button highlighting change

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -18,13 +18,10 @@ button {
     border-color: #9a9a9a;
     border-radius: 0.25em !important;
     border-right: 0.02em solid rgba(28, 28, 28, 0.14902);
-    border-style: outset;
-    background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #610b0d 50%);
-    background-size: 290%;
-    transition: background-position .5s; }
+    border-style: outset; }
   button:hover, button:focus, button:active {
     font-weight: bold;
-    background-position: 100%;
+    background-color: #610b0d;
     color: #fff; }
   button > span {
     display: block;
@@ -270,6 +267,7 @@ input.sheet-collapse-flag:checked ~ div.sheet-collapse {
       text-transform: lowercase; }
     .sheet-tabs button[type='action']:hover, .sheet-tabs button[type='action']:focus, .sheet-tabs button[type='action']:active {
       text-shadow: inset 0px 0px 3px 1px #e31715;
+      background-color: #610b0d;
       transform: scale(1.1); }
   .sheet-tabs button[type='roll'] {
     background: none;
