--- a/Shadowrun5thEdition/src/scss/base/_base.scss
+++ b/Shadowrun5thEdition/src/scss/base/_base.scss
@@ -22,15 +22,11 @@ button {
         right              : 0.02em solid $graytrans;
         style              : outset;
     }
-
-    background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $red 50%);
-    background-size: 290%;
-    transition: background-position .5s;
   }
 
   &:hover, &:focus, &:active { 
     font-weight: bold; 
-    background-position: 100%;
+    background-color: $red;
     color: $white;
   }
 
