--- a/Shadowrun5thEdition/src/scss/layout/_tabs.scss
+++ b/Shadowrun5thEdition/src/scss/layout/_tabs.scss
@@ -19,7 +19,8 @@
 
       &:hover, &:focus, &:active {
         text-shadow: $box-shadow-red;
-        transform: scale(1.1);
+        background-color: $red;
+        transform: $button-scale-small;
       }
     }
 
