--- a/Ironsworn_v2/precompiled/html/components/character-details/notes.html
+++ b/Ironsworn_v2/precompiled/html/components/character-details/notes.html
@@ -1,5 +1,5 @@
+
 <div>
-<h3 class="sheet-divide" style="margin-top: 1em;">&emsp;NOTES&emsp;</h3>
-<br>
-<textarea name="attr_sheet-notes"></textarea>
+  <h3 class="sheet-divide" style="margin-top: 1em;">NOTES</h3><br/>
+  <textarea name="attr_sheet-notes"></textarea>
 </div>
