use grid instead of 3colrow for info section

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.css
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.css
@@ -565,6 +565,16 @@ input.sheet-game-line[value="hunter"] ~ * input.sheet-weapon:checked + span + .s
     flex: 1;
 }
 
+.sheet-info-grid {
+    display: grid;
+    grid-template-columns: repeat(2, auto minmax(0, 1fr) 30px) auto minmax(0, 1fr);
+    align-items: center;
+}
+
+.sheet-info-grid > input[type="text"] {
+    width: auto;
+}
+
 .sheet-simple-attribute {
     display: flex;
     flex-direction: column;
