combine normal page 1 and organization page 1

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.css
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.css
@@ -141,6 +141,7 @@ input.sheet-page3-sheet:not(:checked) ~ .sheet-page3,
 input.sheet-edition[value="1"] ~ * .sheet-2nd,
 input.sheet-edition[value="2"] ~ * .sheet-1st,
 input.sheet-category:not([value="normal"]) ~ .sheet-normal,
+input.sheet-category:not([value="normal"]) ~ * .sheet-normal,
 input.sheet-category:not([value="organization"]) ~ .sheet-organization {
     display: none !important;
 }
