hide all organization sections when not an organization

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.css
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.css
@@ -142,7 +142,8 @@ input.sheet-edition[value="1"] ~ * .sheet-2nd,
 input.sheet-edition[value="2"] ~ * .sheet-1st,
 input.sheet-category:not([value="normal"]) ~ .sheet-normal,
 input.sheet-category:not([value="normal"]) ~ * .sheet-normal,
-input.sheet-category:not([value="organization"]) ~ .sheet-organization {
+input.sheet-category:not([value="organization"]) ~ .sheet-organization,
+input.sheet-category:not([value="organization"]) ~ * .sheet-organization {
     display: none !important;
 }
 
