put skills and othertraits into flex rather than float

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.css
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.css
@@ -533,6 +533,13 @@ input.sheet-game-line[value="hunter"] ~ * input.sheet-weapon:checked + span + .s
     color: #000000;
 }
 
+.sheet-sidebar {
+    display: flex;
+}
+.sheet-sidebar > :nth-child(2) {
+    flex: 1;
+}
+
 .sheet-columns {
     display: flex;
     justify-content: space-between;
@@ -630,11 +637,6 @@ input.sheet-game-line[value="hunter"] ~ * input.sheet-weapon:checked + span + .s
     font-size: 0.8em;
     text-align: center;
     font-style: italic;
-}
-
-.sheet-skills {
-    float: left;
-
 }
 
 .sheet-otherattributes {
