use :not(:first-child) rather than :nth-child(2)

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.css
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.css
@@ -536,7 +536,7 @@ input.sheet-game-line[value="hunter"] ~ * input.sheet-weapon:checked + span + .s
 .sheet-sidebar {
     display: flex;
 }
-.sheet-sidebar > :nth-child(2) {
+.sheet-sidebar > :not(:first-child) {
     flex: 1;
 }
 
