[Ryuutama]: making spell rollable from template, adding magic skill

--- a/Ryuutama/Ryuutama.css
+++ b/Ryuutama/Ryuutama.css
@@ -233,6 +233,11 @@ hr {
     top: 1px;
 }
 
+.sheet-skillCheckColumn {
+    flex-grow: 1;
+    padding: 0 20px;
+}
+
 .sheet-conditionCheck {
     position: relative;
     bottom: 5px;
@@ -553,9 +558,9 @@ input.sheet-tab5:checked ~ span.sheet-characterEquipment {
 .sheet-rolltemplate-oneDieCheck .sheet-rollTitle.sheet-Summer,
 .sheet-rolltemplate-accuracyCheck .sheet-rollTitle.sheet-Summer {background-color:#e0861b;}
 
-.sheet-rolltemplate-skillCheck .sheet-rollTitle.sheet-Autumn,
-.sheet-rolltemplate-oneDieCheck .sheet-rollTitle.sheet-Autumn,
-.sheet-rolltemplate-accuracyCheck .sheet-rollTitle.sheet-Autumn {background-color:#9e022b;}
+.sheet-rolltemplate-skillCheck .sheet-rollTitle.sheet-Fall,
+.sheet-rolltemplate-oneDieCheck .sheet-rollTitle.sheet-Fall,
+.sheet-rolltemplate-accuracyCheck .sheet-rollTitle.sheet-Fall {background-color:#9e022b;}
 
 .sheet-rolltemplate-skillCheck .sheet-rollTitle.sheet-Winter,
 .sheet-rolltemplate-oneDieCheck .sheet-rollTitle.sheet-Winter,
@@ -626,6 +631,15 @@ input.sheet-tab5:checked ~ span.sheet-characterEquipment {
     padding: 1px 3px;
 }
 
+.sheet-rolltemplate-spellAttrText a[href^="!"],
+.sheet-rolltemplate-spellAttrText a[href^="~"] {
+    background: none;
+    color: #000;
+    border: none;
+    padding: 0;
+    font-weight: bold;
+}
+
 .sheet-rolltemplate-spellAttr {
     flex: 1;
 }
@@ -671,7 +685,7 @@ button[type=roll].sheet-skill-check-button {
     opacity: 0.5;
     height: 0;
     width: 0;
-    bottom: 20px;
+    bottom: 18px;
     float: right;
 }
 
@@ -697,7 +711,7 @@ div.sheet-settings {
 
 .sheet-spell-details {
     display: grid;
-    grid-template-columns: 200px 50px 100px 200px 125px 100px;
+    grid-template-columns: 200px 50px 100px 200px 120px 105px;
     grid-template-rows: 1fr;
     text-align: left;
 }
@@ -718,6 +732,20 @@ div.sheet-settings {
     padding-bottom: 20px;
 }
 
+/* Journey Rules
+ ============================= */
+
+ .sheet-journeyRulesGrid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    justify-items: center;
+}
+
+.sheet-journeyRulesTitle { grid-area: 1 / 1 / 2 / 4; }
+.sheet-journeyRulesTravelCheck { grid-area: 2 / 1 / 4 / 2; }
+.sheet-journeyRulesDirectionCheck { grid-area: 2 / 2 / 4 / 3; }
+.sheet-journeyRulesCampCheck { grid-area: 2 / 3 / 4 / 4; }
 
 /* NPC checkbox functionality
     ============================= */
