update merits/other styling to responsive; consolidate organization merits/ceremonies

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.css
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.css
@@ -88,6 +88,45 @@ input.sheet-type[value="hunter"] ~ * .sheet-hunter {
     display: inline-block !important;
 }
 
+input.sheet-game-line[value="mortal"] ~ * div.sheet-mortal,
+input.sheet-type[value="mortal1"] ~ * div.sheet-mortal1,
+input.sheet-type[value="mortal2"] ~ * div.sheet-mortal2,
+input.sheet-type[value="mortal2-organization"] ~ * div.sheet-mortal2-organization,
+input.sheet-type[value="vampire2"] ~ * div.sheet-vampire2,
+input.sheet-type[value="vampire1"] ~ * div.sheet-vampire,
+input.sheet-type[value="vampire1"] ~ * div.sheet-vampire1,
+input.sheet-type[value="vampire2"] ~ * div.sheet-vampire,
+input.sheet-type[value="vampire2"] ~ * div.sheet-vampire2,
+input.sheet-type[value="werewolf1"] ~ * div.sheet-werewolf,
+input.sheet-type[value="werewolf1"] ~ * div.sheet-werewolf1,
+input.sheet-type[value="werewolf2"] ~ * div.sheet-werewolf,
+input.sheet-type[value="werewolf2"] ~ * div.sheet-werewolf2,
+input.sheet-type[value="mage1"] ~ * div.sheet-mage,
+input.sheet-type[value="mage1"] ~ * div.sheet-mage1,
+input.sheet-type[value="mage2"] ~ * div.sheet-mage,
+input.sheet-type[value="mage2"] ~ * div.sheet-mage2,
+input.sheet-type[value="promethean1"] ~ * div.sheet-promethean,
+input.sheet-type[value="promethean1"] ~ * div.sheet-promethean1,
+input.sheet-type[value="promethean2"] ~ * div.sheet-promethean,
+input.sheet-type[value="promethean2"] ~ * div.sheet-promethean2,
+input.sheet-type[value="changeling1"] ~ * div.sheet-changeling,
+input.sheet-type[value="changeling1"] ~ * div.sheet-changeling1,
+input.sheet-type[value="changeling2"] ~ * div.sheet-changeling,
+input.sheet-type[value="changeling2"] ~ * div.sheet-changeling2,
+input.sheet-game-line[value="geist"] ~ * div.sheet-geist,
+input.sheet-type[value="geist1"] ~ * div.sheet-geist1,
+input.sheet-type[value="geist2"] ~ * div.sheet-geist2,
+input.sheet-type[value="geist2-organization"] ~ * div.sheet-geist2-organization,
+input.sheet-type[value="mummy1"] ~ * div.sheet-mummy,
+input.sheet-type[value="mummy1"] ~ * div.sheet-mummy1,
+input.sheet-type[value="mummy2"] ~ * div.sheet-mummy,
+input.sheet-type[value="mummy2"] ~ * div.sheet-mummy2,
+input.sheet-type[value="demon"] ~ * div.sheet-demon,
+input.sheet-type[value="beast"] ~ * div.sheet-beast,
+input.sheet-type[value="hunter"] ~ * div.sheet-hunter {
+    display: block !important;
+}
+
 input.sheet-game-line[value="mortal"] ~ * table.sheet-mortal,
 input.sheet-type[value="mortal1"] ~ * table.sheet-mortal1,
 input.sheet-type[value="mortal2"] ~ * table.sheet-mortal2,
@@ -533,10 +572,10 @@ input.sheet-game-line[value="hunter"] ~ * input.sheet-weapon:checked + span + .s
     color: #000000;
 }
 
-.sheet-sidebar {
+.sheet-flex {
     display: flex;
 }
-.sheet-sidebar > :not(:first-child) {
+.sheet-grow {
     flex: 1;
 }
 
@@ -574,6 +613,14 @@ input.sheet-game-line[value="hunter"] ~ * input.sheet-weapon:checked + span + .s
     flex: 1;
 }
 
+.sheet-input-list > .sheet-input-group {
+    padding: 2px;
+}
+.sheet-input-list > .sheet-input-group > input[type="text"] {
+    height: 14px;
+    padding: 0;
+}
+
 .sheet-info-grid {
     display: grid;
     grid-template-columns: repeat(2, auto minmax(0, 1fr) 30px) auto minmax(0, 1fr);
@@ -609,12 +656,13 @@ input.sheet-game-line[value="hunter"] ~ * input.sheet-weapon:checked + span + .s
     text-align: left;
 }
 
-.sheet-3colrow table th, .sheet-skills table th, .sheet-othertraits table th {
+.sheet-section-header {
     font-size: 1.7em;
     font-weight: bolder;
     font-family: "Courier";
     color: #000000;
     text-decoration: overline underline;
+    text-transform: uppercase;
     text-align: center;
 }
 
@@ -1417,12 +1465,7 @@ input[type=number] {
     height: 14px;
 }
 
-.sheet-merittable {
-    margin-right: 15px;
-    margin-left: 15px;
-}
-
-.sheet-merittable input[type=text] {
+.sheet-weapontable input[type=text] {
     padding: 0.1px;
     height: 14px;
     width: 135px;
