update discipline styling to responsive

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.css
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.css
@@ -616,9 +616,11 @@ input.sheet-game-line[value="hunter"] ~ * input.sheet-weapon:checked + span + .s
 .sheet-input-list > .sheet-input-group {
     padding: 2px;
 }
-.sheet-input-list > .sheet-input-group > input[type="text"] {
+.sheet-input-list > .sheet-input-group > input[type="text"],
+.sheet-input-list > .sheet-input-group > button.sheet-toggle {
     height: 14px;
     padding: 0;
+    text-align: left;
 }
 
 .sheet-info-grid {
