[Ryuutama]: making the spell section stretchy for bigger screens

--- a/Ryuutama/Ryuutama.css
+++ b/Ryuutama/Ryuutama.css
@@ -711,9 +711,10 @@ div.sheet-settings {
 
 .sheet-spell-details {
     display: grid;
-    grid-template-columns: 200px 50px 100px 200px 120px 105px;
+    grid-template-columns: minmax(200px,25%) minmax(50px,5%) minmax(100px,10%) minmax(200px,50%) minmax(120px,15%) minmax(105px,10%);
     grid-template-rows: 1fr;
     text-align: left;
+    width: 90%;
 }
 
 .sheet-spellName     { grid-area: 1 / 1 / 2 / 2; }
@@ -726,6 +727,7 @@ div.sheet-settings {
 .sheet-spellWrap {
     white-space: normal;
     width: 100%;
+    word-break: break-all;
 }
 
 .repcontainer[data-groupname='repeating_spells'] {
