setting up main page

--- a/Ironsworn_v2/precompiled/src/pages/delve/index.pug
+++ b/Ironsworn_v2/precompiled/src/pages/delve/index.pug
@@ -1,5 +1,11 @@
+//- Header
 div.sheet-delve-mode ${require('../../components/character-details/details.html')}
-div.sheet-delve-mode ${require('../../components/character-details/stats.html')}
+
+//- Nav Bars
 div.sheet-delve-mode ${require('../../components/nav/delve-pages.html')}
-div.sheet-delve-mode ${require('../../components/character-details/debilities.html')}
+div.sheet-delve-mode ${require('../../components/nav/delve-bar.html')}
+
+//- Pages
+
+//- Momentum Footer
 div.sheet-delve-mode ${require('../../components/character-details/momentum.html')}
