setting up main page

--- a/Ironsworn_v2/precompiled/src/pages/delve/index.pug
+++ b/Ironsworn_v2/precompiled/src/pages/delve/index.pug
@@ -6,6 +6,7 @@ div.sheet-delve-mode ${require('../../components/nav/delve-pages.html')}
 div.sheet-delve-mode ${require('../../components/nav/delve-bar.html')}
 
 //- Pages
+div.sheet-delve-mode
 
 //- Momentum Footer
 div.sheet-delve-mode ${require('../../components/character-details/momentum.html')}
