Fixing missing attributes and wrong names

--- a/Agone-(french)/agone-sheet.css
+++ b/Agone-(french)/agone-sheet.css
@@ -637,8 +637,15 @@ input[type=radio]:checked + span {
 }
 /* Companion Sheet - Chars section */
 .sheet-companion-chars {
-	grid-template-columns: repeat(18, 1fr);
+	justify-items: center;
+	grid-template-columns: repeat(22, 1fr);
 }
+.sheet-companion-chars-1 { grid-column: 2/4; }
+.sheet-companion-chars-2 { grid-column: 5/7; }
+.sheet-companion-chars-3 { grid-column: 8/10; }
+.sheet-companion-chars-4 { grid-column: 11/13; }
+.sheet-companion-chars-7 { grid-column: 18/20; }
+.sheet-companion-chars-8 { grid-column: 21/-1; }
 /* Companion Sheet - Skills section */
 .repcontainer[data-groupname=repeating_companion-skills] { margin: 5px 0 0 5px; }
 .repcontainer[data-groupname=repeating_companion-skills] .repitem { margin-bottom: 5px; }
