rename "category" to "entity" and "normal" to "corporeal"

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.css
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.css
@@ -179,10 +179,10 @@ input.sheet-page2-sheet:not(:checked) ~ .sheet-page2,
 input.sheet-page3-sheet:not(:checked) ~ .sheet-page3,
 input.sheet-edition[value="1"] ~ * .sheet-2nd,
 input.sheet-edition[value="2"] ~ * .sheet-1st,
-input.sheet-category:not([value="normal"]) ~ .sheet-normal,
-input.sheet-category:not([value="normal"]) ~ * .sheet-normal,
-input.sheet-category:not([value="organization"]) ~ .sheet-organization,
-input.sheet-category:not([value="organization"]) ~ * .sheet-organization {
+input.sheet-entity:not([value="corporeal"]) ~ .sheet-corporeal,
+input.sheet-entity:not([value="corporeal"]) ~ * .sheet-corporeal,
+input.sheet-entity:not([value="organization"]) ~ .sheet-organization,
+input.sheet-entity:not([value="organization"]) ~ * .sheet-organization {
     display: none !important;
 }
 
