fix experience input group

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.css
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.css
@@ -595,7 +595,7 @@ input.sheet-game-line[value="hunter"] ~ * input.sheet-weapon:checked + span + .s
 .sheet-input-group {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
     padding: 2px 0;
 }
 
@@ -609,7 +609,7 @@ input.sheet-game-line[value="hunter"] ~ * input.sheet-weapon:checked + span + .s
 
 .sheet-input-group > input[type="text"],
 .sheet-input-group > button.sheet-toggle {
-    width: auto;
+    width: 0;
     flex: 1;
 }
 
