refactor vehicle, add gear location

--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -65,7 +65,7 @@ include src/pug/_variables.pug
 	include src/pug/tabs/social.pug
 
 	//- VEHICLE TAB
-	include src/vehicle.html
+	include src/pug/tabs/vehicle.pug
 
 	//- OPTIONS TAB
 	include src/options.html
