--- a/Shadowrun5thEdition/src/pug/tabs/augs.pug
+++ b/Shadowrun5thEdition/src/pug/tabs/augs.pug
@@ -20,6 +20,9 @@
                 - const type = val === 'Augmentations' ? 'text' : 'number';
                 - const placeholder = val === 'Augmentations' ? 'name' : '0';
                 label(data-i18n-title=val title=val)
-                  input(name=`attr_${attrName}` placeholder=placeholder title=`@{repeating_augementations_`+'${x}'+`_${attrName}}` type=type value='')
+                  if type === 'text'
+                    input.text-left(name=`attr_${attrName}` placeholder=placeholder title='@{repeating_augementations_${x}'+`_${attrName}}` type=type value='')
+                  else
+                    input.text-center(name=`attr_${attrName}` placeholder=placeholder title='@{repeating_augementations_${x}'+`_${attrName}}` type=type value='')
               +repeatingSectionNotes('augementations')
               
