--- a/Shadowrun5thEdition/src/pug/tabs/matrix.pug
+++ b/Shadowrun5thEdition/src/pug/tabs/matrix.pug
@@ -10,7 +10,7 @@
         .rows.repeating-container.programs
           h2(data-i18n='programs') Programs
           fieldset(class=`repeating_programs`)
-            input.toggle(name='attr_program_on' type='checkbox' checked)
+            input.toggle.indicator(name='attr_program_on' type='checkbox' checked)
             span.pictos Q
             span.eclipse(name='attr_program')
             button.pictos(name="program_chat" type="roll" value="@{gm_toggle} &{template:rolls}{{header=@{program}}}{{desc=@{notes}}}") w
