--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -6,6 +6,7 @@
 
 @import 'src/scss/components/switch';
 @import 'src/scss/components/collapse';
+@import 'src/scss/components/indicator';
 
 @import 'src/scss/layout/tabs';
 
@@ -27,40 +28,6 @@
 }
 
 /***** GENERIC STYLES *****/
-%parantheseNumbers {
-	vertical-align: middle;
-
-	&:before { content: '('; }
-	&:after { content: ')'; }
-}
-
-%toggleCheckbox,
-input.sheet-toggle {
-	position: absolute;
-	opacity: 0;
-	z-index: 2;
-}
-
-%toggleRelative {
-	position: relative;
-	opacity: 0;
-	z-index: 2;
-}
-
-%settingsCheckboxes { 
-	& + span { opacity: 0; }
-	&:checked + span { opacity: 1; }
-
-	&:checked ~ .sheet-settings {
-		display: inline-grid;
-		margin-bottom: 2%;
-	}
-}
-
-%borderBottom { 
-	border-bottom: 1px solid $blacker; 
-}
-
 select {
 	&.sheet-attribute-select {
 		option:nth-of-type(1n+5) { color: $red; }
@@ -215,9 +182,21 @@ select {
 		input[type='radio'] {
 			@extend %toggleRelative;
 			
-			& + span { font-family: 'pictos'; }
+      &:hover {
+        cursor: pointer;
+      }
+
+			& + span { 
+        font-family: 'pictos'; 
+      }
 			
-			&:checked + span {  color: $red; }
+			&:checked + span {  
+        color: $red; 
+      }
+
+      &:hover + span {
+        transform: $button-scale-small;
+      }
 		}
 
 		select {
@@ -321,110 +300,9 @@ select {
 			input[type='number'] { text-align: center; }
 		}
 
-		/***** STATIC  *****/
-		div.sheet-static { 
-			margin-right: 0.5%;
-      transition: transform .2s;
+  @import 'src/scss/pages/tabs/static';
 
-			div.sheet-border-box,
-			div.sheet-border-box .sheet-pc-box {
-				border-top-right-radius: 0px;
-				border-top-left-radius : 10px;
-			}
-
-      div.sheet-attr-box {
-        button {
-          &:hover, &:focus, &:active {
-            transform: scale(1.1);
-          }
-        }
-      }
-		}
-
-
-		/***** CORE  *****/
-		div.sheet-core {
-			div.sheet-armor-buttons {
-				display    : inline-block;
-				font-size: 1.5em;
-				line-height: 20px;
-				margin-left: 1%;
-				width      : 35%;
-
-				button {
-					&[type='roll'] { margin-right: -5px; }
-					&[name='roll_defense'] { 
-						background-color: $gray;
-						color: $white;
-					}
-				}
-
-				span { 
-					font-size: 1em; 
-				}
-			}
-
-			button[name="act_primary_ammo"]:hover > img {
-				filter: brightness(0) invert(1);
-			}
-
-			/***** QUALITIES *****/
-			div.sheet-quality-box {
-				div.sheet-htab input[type='radio'] {
-					margin-right: -100px;
-					width       : 100px;
-				}
-
-				div.sheet-header:nth-of-type(2) .sheet-htab input[type='radio'] {
-					margin-right: -150px;
-					width       : 150px;
-				}
-
-				div.sheet-quality {
-					$qualityGrid: 1fr 3em 1.5em 1em 1em;
-
-					h2:nth-of-type(2) { text-align: center; } 
-
-					div.sheet-headers {
-						display: grid;
-						grid-template-columns: $qualityGrid;
-						@extend %gridGap;
-					}
-
-					div.repitem {
-						grid-template-columns: $qualityGrid;
-						@include repeatingInformation(6, false);
-
-						div.sheet-settings { 
-							grid-column: 1 / 6;
-							grid-template-columns: $qualityGrid;
-						}
-					}
-				}
-
-				div.sheet-martial {
-					$martialGrid: 2fr 1fr 1.5em 1em 1em;
-
-					h2:nth-of-type(2) { text-align: center; } 
-
-					div.sheet-headers {
-						display: grid;
-						grid-template-columns: $martialGrid;
-						@extend %gridGap;
-					}
-
-					div.repitem {
-						grid-template-columns: $martialGrid;
-						@include repeatingInformation(6, false);
-
-						div.sheet-settings { 
-							grid-column: 1 / 6;
-							grid-template-columns: $martialGrid;
-						}
-					}
-				}
-			}
-		}
+  @import 'src/scss/pages/tabs/core';
 
 		/***** SKILLS *****/
 		div.sheet-skill-box {
@@ -509,127 +387,11 @@ select {
 			}
 		}
 
-		/*** ARMS ****/
-		div.sheet-arms {
-			div.sheet-headers {
-				display: grid;
-				@extend %gridGap;
+  @import 'src/scss/pages/tabs/arms';
 
-				h2:nth-of-type(1n+2) { text-align: center; }
-			}
+  @import 'src/scss/pages/tabs/augs';
 
-			div.repitem {
-				h3 { color: $blacker; }
-
-				input { 
-					&:nth-of-type(1n+2) { text-align: center; }
-
-					&.sheet-flag-primary[value='primary'] + button {
-						background-color: $gold;
-						border-bottom: 2px solid $blacker;
-					}
-				}
-			}
-
-			div.sheet-weapons {
-				$weaponsGrid: 25% 1.25fr 3em 2.5em 3em 1fr 1fr 1em 1em;
-				div.sheet-headers { grid-template-columns:$weaponsGrid; }
-
-				div.repitem {
-					grid-template-columns: $weaponsGrid;
-					@include repeatingInformation(10, false);
-
-					div.sheet-settings { 
-						grid-column: 1 / 10;
-						grid-template-columns: $weaponsGrid;
-					}
-				}
-
-				div.sheet-weapon-range,
-				div.sheet-weapon-melee {
-					width: 100%;
-					div.sheet-row { 
-						grid-column: 1 / 9;
-
-						label[data-i18n-title="modeoptions"],
-						label[data-i18n-title="range"]{ 
-							width: 25%; 
-						}
-
-						input[type='number'] {width: 3em;}
-
-						select {width: 30%;}
-					};
-
-					div.sheet-exotic-warning { display: none; }
-
-					input[value='0'] + div.sheet-exotic-warning  { display: block; }
-				}
-			}
-
-			div.sheet-armor {
-				$armorGrid: 30% 3.5em 2.5em 2.5em 2.5em 2.5em 2.5em 1em 1em;
-				div.sheet-headers { grid-template-columns:$armorGrid; }
-
-				div.repitem {
-					grid-template-columns: $armorGrid;
-					@include repeatingInformation(11, false);
-
-					div.sheet-settings { 
-						grid-column: 1 / 11;
-						grid-template-columns: $armorGrid;
-
-						div.sheet-row {
-							grid-column: 1 / 11;
-						}
-					}
-				}
-			}
-		}
-
-		/*** AUGS ****/
-		div.sheet-augs {
-			$augsGrid: 1fr 5em 5em 1em 1em;;
-
-			div.sheet-headers {
-				display: grid;
-				grid-template-columns:$augsGrid;
-			} 
-
-			div.repitem {
-				grid-template-columns: $augsGrid;
-				@include repeatingInformation(6, true);
-
-				input[name='attr_augementation'] { text-align: left; }
-
-				div.sheet-settings { 
-					grid-column: 1 / 6;
-					grid-template-columns: $augsGrid;
-				}
-			}	
-		}
-
-		/*** GEAR ****/
-		div.sheet-gear {
-			$gearGrid: 1fr 5em 5em 1em 1em;;
-
-			div.sheet-headers {
-				display: grid;
-				grid-template-columns:$gearGrid;
-			} 
-
-			div.repitem {
-				grid-template-columns: $gearGrid;
-				@include repeatingInformation(6, true);
-
-				input[name='attr_item'] { text-align: left; }
-
-				div.sheet-settings { 
-					grid-column: 1 / 6;
-					grid-template-columns: $gearGrid;
-				}
-			}	
-		}
+  @import 'src/scss/pages/tabs/gear';
 
 
 		//used in magic & complex forms
@@ -637,271 +399,15 @@ select {
 			margin-top: 1%;
 		}
 
-		/***** MAGIC *****/
-		div.sheet-magic {
-			$magicGrid: 30% 1.5fr 1.5fr 2fr 2em 1em 1em;
+  @import 'src/scss/pages/tabs/magic';
 
-			input.sheet-magic-toggle[value='rituals'] ~ .sheet-headers h2:nth-of-type(1n+2) {
-				@extend %display-none;
-			}
+  @import 'src/scss/pages/tabs/matrix';
 
-			h2:nth-of-type(1n+2) { text-align: center; }
-			h3 { color: $blacker; }
+  @import 'src/scss/pages/tabs/social';
 
-			div.sheet-headers {
-				display: grid;
-				@extend %gridGap;
-				grid-template-columns:$magicGrid;
+  @import 'src/scss/pages/tabs/vehicle';
+}
 
-				h3:nth-of-type(1n+2) { text-align: center; }
-			} 
-
-			/***** SPELLS & PREPARTATIONS *****/
-			div.sheet-spellsForumlas {
-				div.repitem {
-					grid-template-columns: $magicGrid;
-
-					@include repeatingInformation(8, false);
-
-					input[name='attr_damage'],
-					input[name='attr_dicepool_modifier'] {
-						width: 3.5em;
-					}
-
-					select[name='attr_category'] { grid-row: 2; }
-
-					div.sheet-row { grid-column: 1 / 6; }
-
-					div.sheet-settings { 
-						grid-column: 1 / 8;
-						grid-template-columns: $magicGrid;
-					}
-				}
-			}
-
-			/***** RITUALS *****/
-			div.sheet-magic-rituals {
-				$ritualsGrid: 1fr 1em 1em;
-
-				@include repeatingInformation(4, false);
-
-				div.repitem {
-					grid-template-columns: $ritualsGrid;
-
-					label {
-						&[data-i18n-title='name'] { grid-column: 1 / 4; }
-					}
-
-					div.sheet-row { grid-column: 1 / 4; }
-				}
-
-				div.sheet-settings {
-					grid-template-columns: $ritualsGrid;
-					grid-column: 1 / 4;
-				}
-			}
-
-			div.sheet-magic-preps, div.sheet-magic-spells {
-				textarea { width: 93%; }
-			}
-
-			/***** PREPARATIONS *****/
-			div.sheet-magic-preps {
-				/* READIED PREPARATIONS */
-				div.sheet-prepared-preparations {
-					$preparationsGrid: 40% 1fr 1fr 2fr 1em 1em;
-
-					div.sheet-headers {
-						grid-template-columns:$preparationsGrid ;
-					} 
-
-					div.repitem {
-						grid-template-columns: $preparationsGrid ;
-
-						@include repeatingInformation(7, false);
-
-						div.sheet-settings { 
-							grid-column: 1 / 7;
-							grid-template-columns: $preparationsGrid;
-
-							select { grid-column: 4 / 7; }
-
-							textarea { width: 100%; }
-						}
-					}
-				}
-			}
-
-			/***** ADEPT POWERS *****/
-			div.sheet-powers {
-				$powersGrid: 1fr 3em 1em 1em;;
-
-				div.sheet-headers {
-					grid-template-columns:$powersGrid;
-				} 
-
-				div.repitem {
-					grid-template-columns: $powersGrid;
-					@include repeatingInformation(5, true);
-
-					div.sheet-settings { 
-						grid-column: 1 / 5;
-						grid-template-columns: $powersGrid;
-					}
-				}
-			}
-		}
-
-		/*** MATRIX ****/
-		div.sheet-matrix {
-      button[type='roll'] {
-        font-size: 0.9em;
-      }
-
-			h3 { 
-        color: $blacker; 
-      }
-
-      /* Needs to be refactored into Grid */
-      div.sheet-device-attr {
-        display: inline;
-        transition: transform .2s;
-
-        span {
-          position: relative;
-        }
-
-        input[type='radio']:hover + span {
-          transform: $button-scale-medium;
-        }
-      }
-
-			div.sheet-programs {
-				$programGrid: 1em 1fr 1.5em 1em 1em;
-
-				div.repitem {
-					grid-template-columns: $programGrid;
-					@extend %borderBottom;
-					@include repeatingInformation(6, false);
-
-					input[name='attr_program_on'] {
-						grid-area: 1 / 1 / 1 / 1;
-
-						&:checked + span {
-							color: $gold;
-							font-weight: bolder;
-
-							& + span {
-								font-weight: bolder;
-							}
-						}
-
-						& + span {
-							grid-area: 1 / 1 / 1 / 1;
-						}
-					}
-				}
-
-				div.sheet-settings { 
-					grid-column: 1 / 5;
-
-					input[type='text'] {
-						grid-column: 1 / 4;
-						text-align: left; 
-					}
-
-					label {
-						grid-column: 1 / 4;
-					}
-				}
-			}
-
-			div.sheet-complex-forms {
-				$complexFormsGrid: 30% 1fr 1fr 4em 1em 1em;
-
-				div.sheet-headers {
-					display: grid;
-					@extend %gridGap;
-					grid-template-columns: $complexFormsGrid;
-
-					h2:nth-of-type(1n+2) { text-align: center; }
-				} 
-
-				div.repitem {
-					grid-template-columns: $complexFormsGrid;
-
-					@include repeatingInformation(7, false);
-
-					div.sheet-row {
-						grid-column: 1 / 7;
-					}
-
-					div.sheet-settings { 
-						grid-column: 1 / 7;
-						grid-template-columns: $complexFormsGrid;
-
-					}
-				}
-			}
-		}
-
-		/*** SOCIAL ****/
-		div.sheet-social {
-
-			div.sheet-lifestyle {
-				$lifestyleGrid: 1fr 1.5em 1em 1em;
-				div.repitem {
-					grid-template-columns: $lifestyleGrid;
-					@include repeatingInformation(5, false);
-
-					div.sheet-collapse {
-						padding-left: 2%;
-
-						h3 {
-							margin-right: 1%;
-						}
-					}
-
-					div.sheet-settings { 
-						grid-column: 1 / 5;
-						padding: 1% 2% 5% 2%;
-						min-height: 300px;
-
-						textarea {
-							height: 45px;
-							min-height: 45px;
-						}
-					}
-				}
-			}
-
-			div.sheet-contacts {
-				$contactsGrid: 1fr 4em 5.5em 4em 1.5em 1em 1em;
-
-				div.sheet-headers {
-					display: grid;
-					grid-template-columns: $contactsGrid;
-          grid-column-gap: 0.5%;
-					width: 100%;
-				}
-
-				div.repitem {
-					grid-template-columns: $contactsGrid;
-					@include repeatingInformation(8, false);
-
-
-					div.sheet-settings { 
-						grid-column: 1 / 8;
-					}
-				}
-			}
-		}
-
-		 /*** Vehicle ****/
-		 div.sheet-vehicle {
-			
-		 }
-	}
 	@import 'src/scss/_pc'; 
 
 
