--- a/Shadowrun5thEdition/src/pug/_mixins.pug
+++ b/Shadowrun5thEdition/src/pug/_mixins.pug
@@ -6,7 +6,7 @@ mixin rollButton(header, base, rollFormula)
 mixin skillButton(specialization, skillType)
     - const rollName = specialization === true ? 'specialization' : 'skill';
     - const rollFormula = specialization === true ? '@{dicepool}+@{attribute}+2' : '@{dicepool}+@{attribute}';
-    - const desc = specialization === true ? 'Spec: @{specialization}, @{display_limit}' : '@{display_limit}';
+    - const desc = specialization === true ? 'Spec: @{specialization}, @{display_limit} @{limit}' : '@{display_limit} @{limit}';
     - const display = specialization === true ? 'attr_specialization' : skillType != 'active' ? 'attr_skill' : 'attr_display_skill';
     button.eclipse(name=`roll_${rollName}` type='roll' value!=rollBeginging+'{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[(('+rollFormula+')'+rollEnding+'{{desc='+desc+'}}')
         span(name=display)
@@ -53,13 +53,13 @@ mixin attributeSelect(selectedDefault)
 
 //- LIMIT SElECTS
 mixin limitSelect(selectedDefault)
-    option(value='none') -
+    option(value='') -
     each val, key in limitObject
         - const attributeName = key.toLowerCase().replace(' ', '_');
         if key === selectedDefault
-            option(data-i18n=attributeName value='@{' + val + '}' selected) #{key}
+            option(data-i18n=attributeName value=`@{${val}}` selected) #{key}
         else
-            option(data-i18n=attributeName value='@{' + val + '}') #{key}
+            option(data-i18n=attributeName value=`@{${val}}`) #{key}
 
 //- HOST & SPRITE NPCS
 mixin hostSprite(object, attrName)
@@ -199,3 +199,12 @@ mixin repeatingSectionNotes(section)
     h3(data-i18n='notes') notes
     label(data-i18n-title='notes' title='notes')
         textarea(name='attr_notes' placeholder='Notes' title=`@{repeating_${section}_`+'${x}_notes}' type='text' value='')
+
+mixin repeatingPCVehicles(attribute)
+  - const repeatingRowVehicle = '@{repeating_vehicle_${x}';
+  h3(data-i18n=`${attribute}`)
+  input(name=`attr_${attribute}` type="hidden")
+  input( type="hidden" name=`attr_display_${attribute}`)
+  each val in ['base', 'modifier', 'temp']
+    label(data-i18n-title=`${attribute} ${val}`)
+      input(name=`attr_${attribute}_${val}` placeholder="#" title=`${repeatingRowVehicle}_${val}` type="number")
