--- a/Shadowrun5thEdition/src/pug/tabs/core.pug
+++ b/Shadowrun5thEdition/src/pug/tabs/core.pug
@@ -25,7 +25,7 @@
               button.pictos(name="quality_chat" type="roll" value="@{gm_toggle} &{template:rolls}{{header=@{quality}}}{{desc=@{notes}}}") w
               +repeatingSectionFlags()
               .settings
-                input(name="attr_quality" placeholder="quality name" title="@{repeating_quality_${x}_quality}" type="text")
+                input.text-left(name="attr_quality" placeholder="quality name" title="@{repeating_quality_${x}_quality}" type="text")
                 select(name="attr_type" title="@{repeating_quality_${x}_type}" value='p')
                   option(data-i18n="p" value="P" selected) P
                   option(data-i18n="n" value="N") N
@@ -41,6 +41,6 @@
               button.pictos(name="technique_chat" type="roll" value="@{gm_toggle} &{template:rolls}{{header=@{technique}}}{{desc=@{notes}}}") w
               +repeatingSectionFlags()
               .settings
-                input(name="attr_technique" placeholder="technique name" title="@{repeating_martial_${x}_technique}" type="text")
+                input.text-left(name="attr_technique" placeholder="technique name" title="@{repeating_martial_${x}_technique}" type="text")
                 input(name="attr_style" placeholder="style name" title="@{repeating_martial_${x}_style}" type="text")
                 +repeatingSectionNotes('martial')
