--- a/Shadowrun5thEdition/src/pug/tabs/gear.pug
+++ b/Shadowrun5thEdition/src/pug/tabs/gear.pug
@@ -10,16 +10,22 @@
             h2(data-i18n=`${val.toLowerCase()}`) #{val}
         .rows.repeating-container
           fieldset(class=`repeating_items`)
-            span(name=`attr_item`)
+            //-input.toggle.indicator(name='attr_gear_on_character' type='checkbox' checked)
+            //-span.pictos(title='on character') U
+            select.pictos(name='attr_location' value='person')
+              each val, key in {'person':'U', 'bag': 'O', 'home':'H', 'vehicle':'X', 'other':'.'}
+                option.pictos(value=key) #{val}
+            input(name='attr_location' type='hidden' value='person')
+            span.text-left(name=`attr_item`)
             span.text-center(name=`attr_rating`)
             span.text-center(name=`attr_quantity`)
             +repeatingSectionFlags()
             .settings
               label(data-i18n-title='item' title='item')
-                input(name=`attr_item` placeholder='Jammer' title=`@{repeating_items_`+'${x}'+`_item}` type='text' value='')
+                input.text-left(name=`attr_item` placeholder='Jammer' title=`@{repeating_items_`+'${x}'+`_item}` type='text' value='')
               label(data-i18n-title='rating' title='rating')
-                input(name=`attr_rating` placeholder='3' title=`@{repeating_items_`+'${x}'+`_rating}` type='text' value='')
+                input(name=`attr_rating` placeholder='3' title='@{repeating_items_${x}_rating}' type='text' value='')
               label(data-i18n-title='quantity' title='quantity')
-                input(name=`attr_quantity` placeholder='x3' title=`@{repeating_items_`+'${x}'+`_quantity}` type='text' value='')
+                input(name=`attr_quantity` placeholder='x3' title='@{repeating_items_${x}_quantity}' type='text' value='')
               +repeatingSectionNotes('items')
               
