added requires for html

--- a/Ironsworn_v2/precompiled/src/css/Ironsworn.styl
+++ b/Ironsworn_v2/precompiled/src/css/Ironsworn.styl
@@ -147,6 +147,10 @@ hr.sheet-nav-bottom
   margin-bottom: 0.5em
   height: 2px
 
+.input[type=radio].sheet-ironsworn-index:checked ~ div.sheet-ironsworn-index,
+.input[type=radio].sheet-ironsworn-index:checked ~ div.sheet-ironsworn-index
+  display block
+
 .sheet-page1tab,
 .sheet-page2tab,
 .sheet-page3tab,
