--- a/Ironsworn_v2/precompiled/src/index.pug
+++ b/Ironsworn_v2/precompiled/src/index.pug
@@ -1,5 +1,7 @@
 
-//- Pages
+//- Modes
+div ${require('./pages/ironsworn/index.html')}
+div ${require('./pages/delve/index.html')}
 
 //- Roll Templates
 rolltemplate.sheet-rolltemplate-ironsworn_oracles ${require('./roll-templates/ironsworn-oracles.html')}
