--- a/Ironsworn_v2/precompiled/src/pages/delve/index.pug
+++ b/Ironsworn_v2/precompiled/src/pages/delve/index.pug
@@ -1,12 +1,23 @@
-//- Header
-div.sheet-delve-mode ${require('../../components/character-details/details.html')}
+input(type="radio" name="attr_mode" class="sheet-hidden-flex sheet-delve-index")
+div.sheet-delve-index.sheet-hidden-flex
+  //- Header
+  div.sheet-delve-mode ${require('../../components/character-details/details.html')}
 
-//- Nav Bars
-div.sheet-delve-mode ${require('../../components/nav/delve-pages.html')}
-div.sheet-delve-mode ${require('../../components/nav/delve-bar.html')}
+  //- Left Bar
+  div.sheet-delve-mode ${require('../../components/nav/delve-bar.html')}
 
-//- Pages
-div.sheet-delve-mode
+  //- Pages
+  div.sheet-delve-mode ${require('./assets.html')}
+  div.sheet-delve-mode ${require('./bonds.html')}
+  div.sheet-delve-mode ${require('./moves.html')}
+  div.sheet-delve-mode ${require('./oracles.html')}
+  div.sheet-delve-mode ${require('./progress.html')}
+  div.sheet-delve-mode ${require('./sites.html')}
+  div.sheet-delve-mode ${require('./summary.html')}
+  div.sheet-delve-mode ${require('./vows.html')}
 
-//- Momentum Footer
-div.sheet-delve-mode ${require('../../components/character-details/momentum.html')}
+  //- Right Bar
+  div.sheet-delve-mode ${require('../../components/nav/delve-pages.html')}
+
+  //- Footer
+  div.sheet-delve-mode ${require('../../components/character-details/momentum.html')}
