--- a/Ironsworn_v2/precompiled/src/pages/ironsworn/index.pug
+++ b/Ironsworn_v2/precompiled/src/pages/ironsworn/index.pug
@@ -1,3 +1,22 @@
-div.sheet-ironsworn-mode ${require('../../components/character-details/details.html')}
-div.sheet-ironsworn-mode ${require('../../components/nav/ironsworn-pages.html')}
-div.sheet-ironsworn-mode ${require('../../components/character-details/momentum.html')}
+input(type="radio" name="attr_mode" class="sheet-hidden-flex sheet-ironsworn-index")
+div.sheet-ironsworn-index.sheet-hidden-flex
+  //- Header
+  div.sheet-ironsworn-mode ${require('../../components/character-details/details.html')}
+
+  //- Left Bar
+  div.sheet-ironsworn-mode ${require('../../components/nav/ironsworn-pages.html')}
+
+  //- Pages
+  div.sheet-ironsworn-mode ${require('./assets.html')}
+  div.sheet-ironsworn-mode ${require('./bonds.html')}
+  div.sheet-ironsworn-mode ${require('./moves.html')}
+  div.sheet-ironsworn-mode ${require('./oracles.html')}
+  div.sheet-ironsworn-mode ${require('./progress.html')}
+  div.sheet-ironsworn-mode ${require('./summary.html')}
+  div.sheet-ironsworn-mode ${require('./vows.html')}
+
+  //- Right Bar
+  div.sheet-ironsworn-mode ${require('../../components/nav/ironsworn-bar.html')}
+
+  //- Footer
+  div.sheet-ironsworn-mode ${require('../../components/character-details/momentum.html')}
